<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/timestamp" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="no data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sensor_accel" />

    <TextView
        android:id="@+id/accelerometer_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="no data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sensor_linear_accel" />

    <TextView
        android:id="@+id/linear_accelerometer_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="no data" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/sensor_baro" />

    <TextView
        android:id="@+id/barometer_sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="no data" />

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="20sp"-->
<!--        android:text="@string/sensor_gyro" />-->

<!--    <TextView-->
<!--        android:id="@+id/gyroscope_sensor"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="15sp"-->
<!--        android:text="no data" />-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="20sp"-->
<!--        android:text="@string/sensor_mag" />-->

<!--    <TextView-->
<!--        android:id="@+id/magnetic_sensor"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="15sp"-->
<!--        android:text="no data" />-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="20sp"-->
<!--        android:text="@string/sensor_ori" />-->

<!--    <TextView-->
<!--        android:id="@+id/orientation_sensor"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:textSize="15sp"-->
<!--        android:text="no data" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_start"
            android:text="@string/btn_start"
            android:padding="5dp"
            style="@style/Widget.AppCompat.Button" >

        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_stop"
            android:text="@string/btn_stop"
            android:padding="5dp"
            style="@style/Widget.AppCompat.Button" >

        </Button>


    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:rowCount="2"
        android:columnCount="3">

        <Button
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_walk"
            android:text="@string/btn_walk"
            style="@style/Widget.AppCompat.Button" >

        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sit"
            android:text="@string/btn_sit"
            style="@style/Widget.AppCompat.Button" >

        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_run"
            android:text="@string/btn_run"
            style="@style/Widget.AppCompat.Button" >
        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_upstairs"
            android:text="@string/btn_upstairs"
            style="@style/Widget.AppCompat.Button" >

        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_downstairs"
            android:text="@string/btn_downstairs"
            style="@style/Widget.AppCompat.Button" >
        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_subway"
            android:text="@string/btn_subway"
            style="@style/Widget.AppCompat.Button" >
        </Button>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/current_mode"
        android:text="Current Mode"
        android:textSize="20sp" >
    </TextView>
</LinearLayout>